# RP_2026

./: .gitignore  README.md  environment.yml  pyproject.toml
RP_2026/: __init__.py  constants.py  logger_utils.py  seq_utils.py  visualization_utils.py
RP_2026/models/: __init__.py  logistic_regression.py  mlp.py
RP_2026/trainers/: __init__.py  log_and_mlp.py  mlp.py  utils.py
configs/: config.yaml
configs/dataset/: toy.yaml
configs/model/: logistic_regression.yaml  mlp.yaml  pupl.yaml
configs/trainer/: default.yaml  log_and_mlp.yaml
notebooks/: logistic_regression_image_to_variant.ipynb
scripts/: template.py  train_image_to_variant.py
